# pyspline

./: .gitignore  .prospector.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
.github/: build.yaml
.github/workflows/: build.yaml  checks.yaml  prospector.yaml  pylint.yaml  pytests.yaml  release.yaml  ruff.yaml
docs/: conf.py  index.rst  sg_execution_times.rst
docs/auto_examples/: index.rst  plot_test.ipynb  plot_test.py  plot_test.py.md5  plot_test.rst  searchindex  sg_execution_times.rst
docs/auto_examples/jops/: index.rst  plot_essence_psplines.ipynb  plot_essence_psplines.py.md5  plot_essence_psplines.rst  plot_essence_psplines_codeobj.pickle  sg_execution_times.rst
docs/auto_jops_examples/: index.rst  searchindex  sg_execution_times.rst
docs/auto_jops_examples/appendix_c/: index.rst  plot_trunc1.ipynb  plot_trunc1.py.md5  plot_trunc1.rst  plot_trunc1_codeobj.pickle  plot_trunc2.ipynb  plot_trunc2.py.md5  plot_trunc2.rst  plot_trunc2_codeobj.pickle  sg_execution_times.rst
docs/auto_jops_examples/chapter_1/: index.rst  plot_essence_psplines.ipynb  plot_essence_psplines.py  plot_essence_psplines.py.md5  plot_essence_psplines.rst  plot_essence_psplines_codeobj.pickle  plot_ps-show.rst  plot_ps-show_codeobj.pickle  sg_execution_times.rst
docs/auto_jops_examples/chapter_2/: index.rst  plot_air-wind.ipynb  plot_air-wind.py.md5  plot_air-wind.rst  plot_air-wind_codeobj.pickle  plot_bcoeff-lin.ipynb  plot_bcoeff-lin.py.md5  plot_bcoeff-lin.rst  plot_bcoeff-lin_codeobj.pickle  plot_bcoeff.ipynb  plot_bcoeff.py  plot_bcoeff.py.md5  plot_bcoeff.rst  (+68 more)
docs/backreferences/: pyspline.PSplines.derivative.examples  pyspline.PSplines.errors.examples  pyspline.PSplines.examples.new  pyspline.PSplines.fit.examples  pyspline.PSplines.fit.examples.new  pyspline.PSplines.predict.examples  pyspline.PSplines.predict.examples.new  pyspline.basis.basis_bsplines.examples  pyspline.basis.basis_bsplines.examples.new  pyspline.psplines.PSplines.derivative.examples  pyspline.psplines.PSplines.errors.examples  pyspline.psplines.PSplines.examples  pyspline.psplines.PSplines.examples.new  pyspline.psplines.PSplines.fit.examples  pyspline.psplines.PSplines.fit.examples.new  pyspline.psplines.PSplines.predict.examples  pyspline.psplines.PSplines.predict.examples.new  pyspline.psplines.examples
docs/modules/: psplines.rst
examples/: plot_test.py
examples/jops/: README.rst
jops_examples/: README.rst
jops_examples/appendix_c/: README.rst  plot_trunc1.py  plot_trunc2.py
jops_examples/chapter_1/: README.rst
jops_examples/chapter_2/: README.rst  plot_air-wind.py  plot_bcoeff-lin.py  plot_eff-kernels.py  plot_mot-bsp.py  plot_peffdim.py  plot_se.py  plot_slope-height.py
jops_examples/data/: boys7482.csv
pyspline/: arrays.py  basis.py  formatter.py  psplines.py  psplines_derivatives.py  psplines_helper.py  psplines_inner.py
tests/: test_arrays.py  test_basis.py  test_fit_n_dimensional.py  test_fit_one_dimension.py  test_formatter.py  test_psplines.py  test_psplines_helper.py  test_psplines_tensor_product_penalties.py
