[project]
name = "pyspline"
description = "P-splines smoothing"
readme = "README.rst"
requires-python = ">=3.10, <4"
license = {file = "LICENSE"}
keywords = [
	"smoothing",
    "psplines"
]
maintainers = [
  {name = "Steven Golovkine", email = "steven_golovkine@icloud.com"},
]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Mathematics'
]
dynamic = ["version"]
dependencies = [
    'numpy>=1.24.0',
    'scikit-learn>=1.2.0',
]

[project.optional-dependencies]
docs = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx>=3",
    "sphinx-gallery",
]
test = []

[project.urls]
homepage = "https://github.com/StevenGolovkine/pyspline"
documentation = "https://pyspline.readthedocs.io"
repository = "https://github.com/StevenGolovkine/pyspline"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyspline*"]

[tool.setuptools.dynamic]
version = {attr = "pyspline.__version__"}

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["E501"]