[project]
name = "pyspline"
description = "P-splines smoothing"
readme = "README.rst"
requires-python = ">=3.10, <4"
license = {file = "LICENSE"}
keywords = [
	"smoothing",
    "psplines"
]
maintainers = [
  {name = "Steven Golovkine", email = "steven_golovkine@icloud.com"},
]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Mathematics'
]
dynamic = ["version"]
dependencies = [
    'numpy >= 1.24.0, <2',
    'scikit-learn >= 1.2.0',
]

[project.optional-dependencies]
docs = [
    "matplotlib",
    "numpydoc",
    "pydata-sphinx-theme",
    "scikit-learn",
    "scipy",
    "setuptools>=41.2",
    "sphinx>=3",
    "sphinxawesome-theme",
    "sphinx-gallery",
]
test = []

[project.urls]
homepage = "https://github.com/StevenGolovkine/pyspline"
documentation = "https://pyspline.readthedocs.io"
repository = "https://github.com/StevenGolovkine/pyspline"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Setup tools
[tool.setuptools.packages.find]
include = ["pyspline*"]

[tool.setuptools.dynamic]
version = {attr = "pyspline.__version__"}

# Distutils
[tool.distutils.bdist_wheel]
universal = true

# Ruff
[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Mypy
[tool.mypy]
strict = true
strict_equality = true
implicit_reexport = true
explicit_package_bases = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
